# BGEntity

./: CMakeLists.txt  ECS.h  README.md
src/: ComponentPool.h  ECS.cpp  ECS.h  ECSSystem.cpp  ECSSystem.h  IComponentPool.h  ISparseSet.h  SparseSet.h
